--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "growconomy",
   "version": "1.0.0",
-  "description": "",
+  "description": "Growconomy is an online price checker for Growtopia",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "CC-BY-4.0",
   "dependencies": {
     "discord.js": "^11.4.2"
   }
